[gd_scene load_steps=15 format=2]

[ext_resource path="res://art/playership-0001.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://art/playership-thrust.png" type="Texture" id=3]
[ext_resource path="res://art/harvest-area-0001.png" type="Texture" id=4]
[ext_resource path="res://art/harvest-area-0002.png" type="Texture" id=5]
[ext_resource path="res://art/harvest-area-0003.png" type="Texture" id=6]
[ext_resource path="res://art/harvest-area-0004.png" type="Texture" id=7]
[ext_resource path="res://art/harvest-area-0005.png" type="Texture" id=8]
[ext_resource path="res://art/harvest-area-0006.png" type="Texture" id=9]
[ext_resource path="res://art/harvest-area-0007.png" type="Texture" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "thrust",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 26.0
height = 34.0

[sub_resource type="CircleShape2D" id=3]
radius = 128.062

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Player" type="RigidBody2D"]
position = Vector2( 0, 1 )
z_index = 2
gravity_scale = 0.0
linear_damp = 2.0
angular_damp = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
z_index = 2
frames = SubResource( 1 )
animation = "thrust"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3, -2 )
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="HarvestArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HarvestArea"]
position = Vector2( 0, 1 )
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="HarvestArea"]
modulate = Color( 1, 1, 1, 0.368627 )
position = Vector2( -0.999996, 2.5 )
scale = Vector2( 0.946667, 0.926667 )
z_index = 1
frames = SubResource( 4 )
frame = 6
playing = true

[node name="HarvestTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="area_entered" from="HarvestArea" to="." method="_on_HarvestArea_area_entered"]
[connection signal="timeout" from="HarvestTimer" to="." method="_on_HarvestTimer_timeout"]
